--- a/.gitignore
+++ b/.gitignore
@@ -1,23 +1,37 @@
 # 微信开发者工具本地配置文件
 project.config.json
 project.private.config.json
+sitemap.json
 
 # node 依赖
 node_modules/
+miniprogram_npm/
 
 # 本地文件
-miniprogram_npm/
 .DS_Store
 *.log
-
-# IDE 配置文件
 .idea/
 .vscode/
-
-# 临时文件
 *.swp
 *.swo
 *~
 
 # 编译输出
-dist/ 
+dist/
+
+# 微信开发者工具本地目录
+.wxvscode/
+.sourcemap/
+
+# 临时文件
+tmp/
+temp/
+
+# 自动生成的文件
+_book/
+.deploy*/
+
+# 其他
+*.bak
+*.tmp
+*.temp 
