--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,23 @@
- 
+project.config.json
+project.private.config.json
+sitemap.json
+node_modules/
+miniprogram_npm/
+dist/
+.idea/
+.vscode/
+.DS_Store
+*.log
+*.swp
+*.swo
+*~
+thumb
+db.json
+debug.log
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
