--- a/.gitignore
+++ b/.gitignore
@@ -1,23 +1,23 @@
+# 微信开发者工具本地配置文件
 project.config.json
 project.private.config.json
-sitemap.json
+
+# node 依赖
 node_modules/
+
+# 本地文件
 miniprogram_npm/
-dist/
-.idea/
-.vscode/
 .DS_Store
 *.log
+
+# IDE 配置文件
+.idea/
+.vscode/
+
+# 临时文件
 *.swp
 *.swo
 *~
-thumb
-db.json
-debug.log
-.env.local
-.env.development.local
-.env.test.local
-.env.production.local
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
+
+# 编译输出
+dist/ 
